--- a/TCIL.html
+++ b/TCIL.html
@@ -24,7 +24,8 @@
 
 <!-- Header -->
 <header class=" w3-display-container w3-content w3-wide" id="home">
-  <img class="w3-image" src="./tcil.gif" alt="TCIL" width="1000" height="200" >
+ &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp   <img class="w3-image" src="Images/TCIL-Recruitment.png" alt="TCIL" width="1100" height="200">
+
 </header>
 
 <!-- Page content -->
@@ -33,16 +34,14 @@
   <!-- About us Section -->
   <div class="w3-container w3-padding-32" id="myabout">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16" >About Us</h3>
+     TCIL, a prime engineering and consultancy company, is a wholly owned Government of India Public Sector Enterprise under the administrative control of the Department of Telecommunications(DOT), Ministry of Communications, Government of India. TCIL was set up in 1978 for providing Indian telecom expertise in all fields of telecom, Civil and IT to developing countries around the world. Company's core competence is in the fields of Switching, Transmission Systems, Cellular services, Rural Telecommunication, Optical fibre based backbone trans systems, IT and Networking Solutions, Application Software, e-Governence, 3G Network, WIMAX Technology and also Civil construction projects.
   </div>
 
-  <div class="w3-row-padding" >
-    TCIL, a prime engineering and consultancy company, is a wholly owned Government of India Public Sector Enterprise under the administrative control of the Department of Telecommunications(DOT), Ministry of Communications, Government of India. TCIL was set up in 1978 for providing Indian telecom expertise in all fields of telecom, Civil and IT to developing countries around the world. Company's core competence is in the fields of Switching, Transmission Systems, Cellular services, Rural Telecommunication, Optical fibre based backbone trans systems, IT and Networking Solutions, Application Software, e-Governence, 3G Network, WIMAX Technology and also Civil construction projects.
-  </div>
 
 <!-- News Section -->
   <div class="w3-container w3-padding-32" id="mynews">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">News</h3>
-    <p>22 May 2017<br>
+   <p>22 May 2017<br>
 
 TCIL officer created history: Secured his name in Guinness Book of World Records <br>
 
@@ -57,7 +56,7 @@ TCIL PAYS DIVIDEND FOR THE YEAR 2015-16<br>
   <!-- Tenders Section -->
   <div class="w3-container w3-padding-32" id="mytenders">
    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Tenders</h3>
-   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="./tenders.png" style="width: 500px; height: 400px" >
+   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="Images/tenders.png" style="width: 500px; height: 400px" >
   </div>
 
   <!-- Careers Section -->
