--- a/TCIL.html
+++ b/TCIL.html
@@ -24,7 +24,7 @@
 
 <!-- Header -->
 <header class=" w3-display-container w3-content w3-wide" id="home">
- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp   <img class="w3-image" src="Images/TCIL-Recruitment.png" alt="TCIL" width="1100" height="200">
+ &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp   <img class="w3-image" src="TCIL-Recruitment.png" alt="TCIL" width="1100" height="200">
 
 </header>
 
@@ -56,7 +56,7 @@ TCIL PAYS DIVIDEND FOR THE YEAR 2015-16<br>
   <!-- Tenders Section -->
   <div class="w3-container w3-padding-32" id="mytenders">
    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Tenders</h3>
-   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="Images/tenders.png" style="width: 500px; height: 400px" >
+   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="tenders.png" style="width: 500px; height: 400px" >
   </div>
 
   <!-- Careers Section -->
