--- a/TCIL.html
+++ b/TCIL.html
@@ -56,7 +56,7 @@ TCIL PAYS DIVIDEND FOR THE YEAR 2015-16<br>
   <!-- Tenders Section -->
   <div class="w3-container w3-padding-32" id="mytenders">
    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Tenders</h3>
-   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="tenders.png" style="width: 500px; height: 400px" >
+  <img src="tenders.png" style="width: 500px; height: 400px" >
   </div>
 
   <!-- Careers Section -->
